updated lb_gettsdata updated help

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,14 @@ export(lb_datetodoy)
 export(lb_doytodate)
 export(lb_fuzzyconversion)
 export(lb_gettsdata)
+export(lb_openshape)
 export(lb_write_envits)
 import(QCA)
 import(data.table)
+import(gdalUtils)
 import(raster)
 import(rgdal)
 import(rgeos)
+import(rts)
+importFrom(rgdal,readOGR)
+importFrom(tools,file_path_sans_ext)
