--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,5 +13,6 @@ import(raster)
 import(rgdal)
 import(rgeos)
 import(rts)
+import(tools)
 importFrom(rgdal,readOGR)
 importFrom(tools,file_path_sans_ext)
