changed names of functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,9 @@
 export(lb_datetodoy)
 export(lb_doytodate)
 export(lb_fuzzyconversion)
-export(lb_gettsdata)
 export(lb_openshape)
-export(lb_write_envits)
+export(lb_tszonal)
+export(lb_writeenvits)
 import(QCA)
 import(data.table)
 import(gdalUtils)
