--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ export(lb_datetodoy)
 export(lb_doytodate)
 export(lb_fuzzyconversion)
 export(lb_openshape)
+export(lb_theme_bw)
 export(lb_tszonal)
 export(lb_writeenvits)
-import(QCA)
 import(data.table)
 import(gdalUtils)
 import(raster)
@@ -14,5 +14,7 @@ import(rgdal)
 import(rgeos)
 import(rts)
 import(tools)
+importFrom(QCAGUI,calibrate)
+importFrom(ggplot2,theme_bw)
 importFrom(rgdal,readOGR)
 importFrom(tools,file_path_sans_ext)
