--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(lb_openshape)
 export(lb_theme_bw)
 export(lb_tszonal)
 export(lb_writeenvits)
+export(lb_writeshape)
 import(data.table)
 import(gdalUtils)
 import(raster)
