--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(lb_convertBS)
 export(lb_datetodoy)
 export(lb_doytodate)
+export(lb_fastzonal)
 export(lb_fuzzyconversion)
 export(lb_openshape)
 export(lb_theme_bw)
