correction of bugs in fastzonal + add get_pgis + add some temporary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(lb_datetodoy)
 export(lb_doytodate)
 export(lb_fastzonal)
 export(lb_fuzzyconversion)
+export(lb_get_PGIS)
 export(lb_openshape)
 export(lb_theme_bw)
 export(lb_tszonal)
