Added "create_fishnet" and "gdal_polygonizeR"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(create_fishnet)
 export(datetodoy)
 export(doytodate)
 export(extent_reproj)
+export(gdal_polygonizeR)
 export(lb_fastzonal)
 export(lb_fuzzyconversion)
 export(lb_get_PGIS)
@@ -27,11 +28,17 @@ importFrom(gdalUtils,gdalwarp)
 importFrom(ggplot2,theme_bw)
 importFrom(hash,hash)
 importFrom(hash,values)
+importFrom(raster,brick)
+importFrom(raster,crop)
 importFrom(raster,dataType)
 importFrom(raster,extent)
 importFrom(raster,raster)
+importFrom(raster,setValues)
+importFrom(raster,writeRaster)
 importFrom(rgdal,readOGR)
 importFrom(sp,CRS)
+importFrom(sp,GridTopology)
+importFrom(sp,SpatialGridDataFrame)
 importFrom(sp,SpatialPoints)
 importFrom(sp,proj4string)
 importFrom(sp,spTransform)
