--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,8 @@ export(create_fishnet)
 export(datetodoy)
 export(doytodate)
 export(extent_reproj)
+export(fastzonal)
 export(gdal_polygonizeR)
-export(lb_fastzonal)
 export(lb_fuzzyconversion)
 export(lb_get_PGIS)
 export(lb_theme_bw)
@@ -32,10 +32,12 @@ importFrom(raster,brick)
 importFrom(raster,crop)
 importFrom(raster,dataType)
 importFrom(raster,extent)
+importFrom(raster,intersect)
 importFrom(raster,raster)
 importFrom(raster,setValues)
 importFrom(raster,writeRaster)
 importFrom(rgdal,readOGR)
+importFrom(rgdal,writeOGR)
 importFrom(sp,CRS)
 importFrom(sp,GridTopology)
 importFrom(sp,SpatialGridDataFrame)
@@ -43,3 +45,4 @@ importFrom(sp,SpatialPoints)
 importFrom(sp,proj4string)
 importFrom(sp,spTransform)
 importFrom(tools,file_path_sans_ext)
+importFrom(xts,as.xts)
