--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(lb_theme_bw)
 export(lb_tszonal)
 export(lb_writeenvits)
 export(openshape)
+export(rast_reclass)
 export(writeshape)
 import(data.table)
 import(gdalUtils)
@@ -23,7 +24,8 @@ import(rgdal)
 import(rgeos)
 import(rts)
 import(tools)
-importFrom(QCAGUI,calibrate)
+importFrom(data.table,rbindlist)
+importFrom(gdalUtils,gdal_rasterize)
 importFrom(gdalUtils,gdalwarp)
 importFrom(ggplot2,theme_bw)
 importFrom(hash,hash)
@@ -32,8 +34,14 @@ importFrom(raster,brick)
 importFrom(raster,crop)
 importFrom(raster,dataType)
 importFrom(raster,extent)
+importFrom(raster,extract)
+importFrom(raster,getValues)
+importFrom(raster,getZ)
 importFrom(raster,intersect)
 importFrom(raster,raster)
+importFrom(raster,rasterize)
+importFrom(raster,reclassify)
+importFrom(raster,res)
 importFrom(raster,setValues)
 importFrom(raster,writeRaster)
 importFrom(rgdal,readOGR)
