Add dbReadSpatial() function
Add a function to read a spatial table from PostgreSQL databases. This function provides a similar result of function get_PGIS, but with a different implementation and with a syntax similar to the dbReadTable() function in package DBI.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(batch_clip)
 export(convert_BS_timeseries)
 export(create_fishnet)
 export(datetodoy)
+export(dbReadSpatial)
 export(doytodate)
 export(extent_reproj)
 export(fastzonal)
@@ -17,12 +18,14 @@ export(lb_writeenvits)
 export(openshape)
 export(rast_reclass)
 export(writeshape)
+import(RPostgreSQL)
 import(data.table)
 import(gdalUtils)
 import(raster)
 import(rgdal)
 import(rgeos)
 import(rts)
+import(sp)
 import(tools)
 importFrom(data.table,rbindlist)
 importFrom(gdalUtils,gdal_rasterize)
