try to fix calibrate
try to fix error "Error : object ‘calibrate’ is not exported by 'namespace:QCAGUI'"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,13 @@
 
 export(MODISmasker)
 export(batch_clip)
+export(check_spatype)
 export(convert_BS_timeseries)
 export(create_fishnet)
 export(datetodoy)
 export(dbReadSpatial)
 export(doytodate)
 export(extent_reproj)
-export(fastzonal)
 export(gdal_polygonizeR)
 export(lb_fuzzyconversion)
 export(lb_get_PGIS)
@@ -28,8 +28,10 @@ import(rts)
 import(sp)
 import(tools)
 importFrom(data.table,rbindlist)
-importFrom(gdalUtils,gdal_rasterize)
+importFrom(gdalUtils,gdalinfo)
+importFrom(gdalUtils,gdalsrsinfo)
 importFrom(gdalUtils,gdalwarp)
+importFrom(gdalUtils,ogrinfo)
 importFrom(ggplot2,theme_bw)
 importFrom(hash,hash)
 importFrom(hash,values)
@@ -37,23 +39,25 @@ importFrom(raster,brick)
 importFrom(raster,crop)
 importFrom(raster,dataType)
 importFrom(raster,extent)
-importFrom(raster,extract)
-importFrom(raster,getValues)
-importFrom(raster,getZ)
 importFrom(raster,intersect)
 importFrom(raster,raster)
-importFrom(raster,rasterize)
 importFrom(raster,reclassify)
-importFrom(raster,res)
 importFrom(raster,setValues)
 importFrom(raster,writeRaster)
 importFrom(rgdal,readOGR)
 importFrom(rgdal,writeOGR)
+importFrom(rgeos,show)
 importFrom(sp,CRS)
 importFrom(sp,GridTopology)
+importFrom(sp,Polygon)
+importFrom(sp,Polygons)
 importFrom(sp,SpatialGridDataFrame)
 importFrom(sp,SpatialPoints)
+importFrom(sp,SpatialPolygons)
+importFrom(sp,bbox)
 importFrom(sp,proj4string)
 importFrom(sp,spTransform)
+importFrom(stats,na.omit)
 importFrom(tools,file_path_sans_ext)
-importFrom(xts,as.xts)
+importFrom(utils,head)
+importFrom(utils,tail)
