--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R: person("Lorenzo", "Busetto", email = "busetto.l@irea.cnr.it", role = 
 Description: What the package does (one paragraph).
 Depends:
     R (>= 3.2.2)
-Imports: QCAGUI, data.table, gdalUtils, raster, rgdal, rgeos, rts, ggplot2 , hash,
+Imports: QCAGUI, QCA, data.table, gdalUtils, raster, rgdal, rgeos, rts, ggplot2 , hash,
     sp
 License: GPL-3
 LazyData: true
