--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(MODISmasker)
 export(batch_clip)
+export(check_spatype)
 export(convert_BS_timeseries)
 export(create_fishnet)
 export(datetodoy)
@@ -21,6 +22,7 @@ export(writeshape)
 import(RPostgreSQL)
 import(data.table)
 import(gdalUtils)
+import(lubridate)
 import(raster)
 import(rgdal)
 import(rgeos)
@@ -41,6 +43,7 @@ importFrom(raster,extract)
 importFrom(raster,getValues)
 importFrom(raster,getZ)
 importFrom(raster,intersect)
+importFrom(raster,nlayers)
 importFrom(raster,raster)
 importFrom(raster,rasterize)
 importFrom(raster,reclassify)
